--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "prueba-starter",
+  "name": "react-vite-starter",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,9 +11,12 @@
     "format": "prettier --write --ignore-unknown ./src"
   },
   "dependencies": {
+    "i18next": "^23.15.1",
+    "i18next-browser-languagedetector": "^8.0.0",
     "nprogress": "^0.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.0.2",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
